created overall rating formula, ratings table, overall rating calcs

--- a/web_server/templates/h2h.html
+++ b/web_server/templates/h2h.html
@@ -33,11 +33,11 @@
                 />
                 <ul
                     id="suggestions1"
-                    class="absolute left-0 right-0 mt-2 bg-white border border-gray-200 rounded-md shadow-md z-10 max-h-60 overflow-y-auto"
+                    class="absolute left-0 right-0 mt-2 bg-white rounded-md shadow-md z-10 max-h-60 overflow-y-auto"
                 ></ul>
             </div>
             <span class="font-semibold text-blue-600">VS</span>
-            <div class="relative">
+            <div class="relative">  
                 <input 
                     type="text" 
                     id="player2" 
@@ -52,7 +52,7 @@
                 />
                 <ul
                     id="suggestions2"
-                    class="absolute left-0 right-0 mt-2 bg-white border border-gray-200 rounded-md shadow-md z-10 max-h-60 overflow-y-auto"
+                    class="absolute left-0 right-0 mt-2 bg-white rounded-md shadow-md z-10 max-h-60 overflow-y-auto"
                 ></ul>
             </div>
         </div>
