--- a/web_server/templates/index.html
+++ b/web_server/templates/index.html
@@ -41,7 +41,7 @@
         <!-- Suggestions dropdown list -->
         <ul
             id="suggestions"
-            class="absolute left-0 right-0 mt-2 bg-white border border-gray-200 rounded-md shadow-md z-10 max-h-60 overflow-y-auto"
+            class="absolute left-0 right-0 mt-2 bg-white rounded-md shadow-md z-10 max-h-60 overflow-y-auto"
         ></ul>
     </div>
     <script>
