changed requests to cloudscraper to bypass the CloudFlare, started adding more comparisions in h2h bookmark

--- a/web_server/templates/h2h_comparison.html
+++ b/web_server/templates/h2h_comparison.html
@@ -69,6 +69,7 @@
                     {% endfor %}
                 </div>
             </div>
+            <div class="bg-white rounded-2xl mt-5 shadow-md p-6 grid grid-cols-3 gap-6 items-center">
         {% endif %}
     </div>
 </body>
